--- a/home-page/css/bootstrap/platform.css
+++ b/home-page/css/bootstrap/platform.css
@@ -12,6 +12,9 @@ legend { color:#000; }
 fieldset, img { border:0; } 
 button, input, select, textarea { font-size:100%; } 
 table { border-collapse:collapse; border-spacing:0; }
+body {
+	height: 100%
+}
 .home-image{
 	width:30%;
 	height:auto;
@@ -161,9 +164,10 @@ hr{
 	background-color:#d7d7d7 
 }
 .test{
-	background-image: url("./img/u0.jpg");
+	background-image:url(/img/image.jpg);
 	background-repeat: no-repeat;
-	background-size: 100% 100%
+	background-size: 100% 100%;
+	height: 100%
 }
 .showLogo{
 	padding: 30px 0px 30px 0px;
