--- a/home-page/template/Home-page.html
+++ b/home-page/template/Home-page.html
@@ -8,12 +8,12 @@
 			</div>
 			<div class="side_nav">
 				<div class="download_detile">
-					<span>Iphone</span>
-					<span><img src="./img/iphone.png" style="margin-left:5px"></span>
+					<a href="/test" style="text-decoration:none;"><span>Iphone</span></a>
+					<a href="/test"><span><img src="./img/iphone.png" style="margin-left:5px"></span></a>
 				</div>
 				<div class="download_detile">
-					<span>Android</span>
-					<span><img src="./img/android.png" class="forone"></span>
+					<a href="/test" style="text-decoration:none;"><span>Android</span></a>
+					<a href="/test"><span><img src="./img/android.png" class="forone"></span></a>
 				</div>
 			</div>
 		</div>
