--- a/home-page/template/joinus.html
+++ b/home-page/template/joinus.html
@@ -1,11 +1,8 @@
 <div class="container">
 	<navgps></navgps>
 	<div class="recruitList">
-		<div class="recruitImg">
-			<img src="" alt="攻城狮">
-		</div>
 		<div class="content">
-			<job-list ng-repeat="(key,job) in jobList" ng-class="{even:!$even,odd:!$odd}"></job-list>
+			<job-list ng-repeat="(key,job) in jobList" ></job-list>
 		</div>
 	</div>
 </div>
