--- a/home-page/template/navGPS.html
+++ b/home-page/template/navGPS.html
@@ -9,7 +9,7 @@
       </button>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <img src="./img/LOGO.png" class="home-image">
+      <a href="/"><img src="./img/LOGO.png" class="home-image"></a>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/" class="special">首页</a></li>
         <li><a href="/join" class="special" >加入我们</a></li>
