--- a/home-page/template/test.html
+++ b/home-page/template/test.html
@@ -1,6 +1,6 @@
 <div class="container test">
 	<div class="showLogo">
-		<img src="./img/LOGO.png" alt="LOGO">
+		<a href="/"><img src="./img/LOGO.png" alt="LOGO"></a>
 	</div>
 	<hr>
 	<div class="content">
