--- a/yj-web-platform/css/bootstrap/platform.css
+++ b/yj-web-platform/css/bootstrap/platform.css
@@ -1,6 +1,5 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
 body, button, input, select, textarea { font:12px/1.5tahoma, arial, \5b8b\4f53; } 
-h1, h2, h3, h4, h5, h6{ font-size:100%; } 
 address, cite, dfn, em, var { font-style:normal; } 
 code, kbd, pre, samp { font-family:couriernew, courier, monospace; } 
 small{ font-size:12px; } 
@@ -185,4 +184,48 @@ from{transform:rotate(0deg)}
 	height: 30px;
 	line-height: 30px;
 	margin-top: 20px
+}
+.navside{
+	background-color:#FFD700;
+}
+.navbar-nav li a{
+	color: white;
+	font-weight: 800
+}
+.navbar-brand{
+	color: white;
+	font-weight: 800
+}
+.navbar-nav li a:hover {
+	color: white;
+	background-color: #FFA500
+}
+.navbar-brand:hover{
+	color: white;
+	background-color: #FFA500
+}
+.navbar-nav li a:active{
+	color: white;
+	background-color: #FFA500
+}
+.navbar-nav li a:visited{
+	color: white;
+	background-color: #FFA500
+}
+.navbar-brand:active{
+	color: white;
+	background-color: #FFA500
+}
+.navbar-brand:visited{
+	color: white;
+	background-color: #FFA500
+}
+.word_view {
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 20px
+}
+
+.list-group-item{
+	border: 1px dashed gray;
 }
