--- a/yj-web-platform/template/addSiteInfo.html
+++ b/yj-web-platform/template/addSiteInfo.html
@@ -1,4 +1,4 @@
-<div class="addSiteInfo">
+<div class="addSiteInfo container">
 	<form  name="addSiteInfo_form"  ng-submit="addSiteInfo()" novalidate>
 		<lable>经度</lable>
 		<input type="text" ng-model="addSite.long" required name="long" placeholder="请输入场地经度" ng-minlength=1 />
