--- a/yj-web-platform/template/getSiteInfo.html
+++ b/yj-web-platform/template/getSiteInfo.html
@@ -1,4 +1,4 @@
-<div class="getSiteInfo">
+<div class="getSiteInfo container">
 	<form  name="getSiteInfo_form"  ng-submit="getSiteInfo()" novalidate>
 		<lable>经度</lable>
 		<input type="text" ng-model="getSite.long" required name="long" placeholder="请输入场地经度" ng-minlength=1 />
