--- a/yj-web-platform/template/getjobs.html
+++ b/yj-web-platform/template/getjobs.html
@@ -1,5 +1,5 @@
-<section>
+<div class="container">
 	<div class="jobList">
-		<job-list ng-repeat="(key,job) in jobList"></job-list>
+		<job-list ng-repeat="(key,job) in jobList" ></job-list>
 	</div>
-</section>
+</div>
