--- a/yj-web-platform/template/rePwd.html
+++ b/yj-web-platform/template/rePwd.html
@@ -1,4 +1,4 @@
-<div class="rePwd">
+<div class="rePwd container">
 	<form ng-submit="rePwd()" name="repwd_form" novalidate>
 		<input type="text" placeholder="请输入驾校营业执照"  name="businessLicenseId"   ng-model="repwd.businessLicenseId"  required />
 		<div class="error" ng-messages="repwd_form.businessLicenseId.$error" ng-messages-multiple>
