--- a/yj-web-platform/template/views.html
+++ b/yj-web-platform/template/views.html
@@ -1,5 +1,6 @@
-<div class="tester_detile">
-	<span>{{tester._id}}</span>
-	<span class="test_span">{{tester.email}}</span>
+<div class="container">
+	<div class="tester_detile">
+		<span>{{tester._id}}</span>
+		<span class="test_span">{{tester.email}}</span>
+	</div>
 </div>
-<br/>
