--- a/yj-web-platform/template/addjobs.html
+++ b/yj-web-platform/template/addjobs.html
@@ -1,4 +1,4 @@
-<section>
+<div class="container">
 	<p class="should">watching model:</p>
     <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
     Select File:
@@ -10,21 +10,16 @@
 			<form name="jobs_form" novalidate ng-submit="jobsForm()">
 				<label>职位名字</label>
 				<input type="text" placeholder="职位名字" ng-model="jobs.name" class="form-control" />
-				<br>
 				<label>职位描述</label>
-				<div ng-model="jobs.describle"  contentEditable=true style="min-height:300px" ></div>
-				<br>
+				<div ng-model="jobs.describle"  contentEditable=true style="min-height:300px" class="work_boder"></div>
 				<label>职位职责</label>
-				<div  ng-model="jobs.duty" contentEditable=true style="min-height:300px"></div>
-				<br>
+				<div  ng-model="jobs.duty" contentEditable=true style="min-height:300px" class="work_boder"></div>
 				<label>职位工资</label>
 				<input type="text" placeholder="职位工资" ng-model="jobs.pay" class="form-control" />
-				<br>
 				<label>职位图片</label>
 				<input  ng-model="jobs.imgName"  type="text" placeholder="职位图片" class="form-control" />
-				<br>
 				<button type="submit" class="btn btn-primary btn-lg active">提交</button>
 			</form>
 		</div>
 	</div>
-</section>
+</div>
