--- a/yj-web-platform/template/reviseJob.html
+++ b/yj-web-platform/template/reviseJob.html
@@ -1,5 +1,5 @@
-<section>
+<div class="">
 	<div class="jobList">
 		<jobs-list ng-repeat="(key,job) in jobsList"></jobs-list>
 	</div> 
-</section>
+</div>
