--- a/yj-web-platform/template/testView.html
+++ b/yj-web-platform/template/testView.html
@@ -1,7 +1,7 @@
-<section>
+<div class="container">
 	<div class="testView">
 		<test-view ng-repeat="(key,tester) in testerList"></test-view>
 	</div>
 	<button class="btn btn-primary btn-lg"  ng-click="getMoreView('pre')" ng-disabled="firstPage"> 上一页</button>
 	<button class="btn btn-primary btn-lg"  ng-click="getMoreView('next')" ng-disabled="lastPage"> 下一页</button>
-</section>
+</div>
