--- a/yj-web-platform/template/login.html
+++ b/yj-web-platform/template/login.html
@@ -1,4 +1,4 @@
-<section class="login">
+<div  class="login container">
 	<div class="Login_detiles">
 		<form  name="signin_form" novalidate ng-submit="signinForm()" >
 			<label>Your Name</label>
@@ -20,4 +20,4 @@
 			<button type="submit">Submit</button>
 		</form>
 	</div>
-</section>
+</div >
