--- a/yj-web-platform/css/bootstrap/platform.css
+++ b/yj-web-platform/css/bootstrap/platform.css
@@ -101,8 +101,8 @@ from{transform:rotate(0deg)}
 	background-image: url(../../img/282396.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	width: 100%;
-	height:100%;
+	/* width: 100%; */
+	height:60%;
 }
 .Login_detiles{
 	width:auto;
