--- a/yj-web-platform/template/userItem.html
+++ b/yj-web-platform/template/userItem.html
@@ -1,3 +1,6 @@
-<span>{{user._id}}</span>
-<span>{{user.phone}}</span>
-<span>{{user.createDate}}</span>
+<div class="clear"></div>
+<div class="data_detile">
+	<button  type="button" class="btn btn-default btn-lg margin">{{user._id}}</button>
+	<button  type="button" class="btn btn-default btn-lg margin">{{user.phone}}</button>
+	<button  type="button" class="btn btn-default btn-lg margin">{{user.createDate}}</button>
+</div>
