--- a/yj-web-platform/template/getImUsers.html
+++ b/yj-web-platform/template/getImUsers.html
@@ -1,6 +1,7 @@
 <div class="container">
-	<button type="button" class="btn btn-default">用户_id</button>
-	<button type="button" class="btn btn-default">创建日期</button>
+	<button type="button" class="btn btn-default fixed_width">用户_id</button>
+	<button type="button" class="btn btn-default fixed_width">创建日期</button>
+	<button type="button" class="btn btn-default fixed_width">用户userId</button>
 	<div class="clear"></div>
 	<imuser-list ng-repeat="(key,imuser) in imuserLIst"></imuser-list>
 	<!-- <div class="clear"></div> -->
