--- a/yj-web-platform/template/imuserList.html
+++ b/yj-web-platform/template/imuserList.html
@@ -1,21 +1,50 @@
-<button type="button" class="btn btn-default" >{{imuser._id}}</button>
-<button type="button" class="btn btn-default" >{{imuser.createDate}}</button>
-<button type="button" class="btn btn-default" >{{imuser.userId}}</button>
+<button type="button" class="btn btn-default fixed_width" >{{imuser._id}}</button>
+<button type="button" class="btn btn-default fixed_width" >{{imuser.createDate}}</button>
+<button type="button" class="btn btn-default fixed_width" >{{imuser.userId}}</button>
 <div class="container" ng-controller="examineNews">
-	<button ng-click="examines(imuser)" class="btn btn-success">审核教练</button>
-	<button ng-click="examineRefuseCoach(imuser)" class="btn  btn-success">拒绝审核教练</button>
+	<button ng-click="examines(imuser)" class="btn btn-warning" data-toggle="modal" data-target=".as-example-modal-lg" >审核教练</button>
+	<button ng-click="examineRefuseCoach(imuser)" class="btn btn-warning" data-toggle="modal" data-target=".bs-example-modal-lg" >拒绝审核教练</button>
 	<div class="clear"></div>
-	<form name="examine_form" novalidate ng-show="showExamine" >
-		<lable>输入名字</lable>
-		<input type="text" ng-model="examine.name" required  />
-		<lable>输入身份证</lable>
-		<input type="text" ng-model="examine.id" required    />
-		<lable>输入teachType</lable>
-		<input type="text" ng-model="examine.teachType" required    />
-		<button type="submit" ng-click="examineCoach()" >提交</button>
-	</form>
-	<form name="reason_form" novalidate ng-show="showReason" style="margin-top:5px">
-		<input  class="form-control"  ng-model="examine.resaon" style="float:left" />
-		<button type="submit" class="btn btn-success" ng-click="examineResaon()" style="float:left" >提交</button>
-	</form>
+	<div class="modal fade bs-example-modal-lg"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+	    	<img ng-src="{{examine.urlCoach}}" width="100" height="150">
+	    	<img ng-src="{{examine.urlID}}" width="100" height="150">
+	    	<img ng-src="{{examine.urlOther}}" width="100" height="150">
+	      	<form name="reason_form" novalidate ng-show="showReason" style="margin-top:5px">
+	      		<label>拒绝原因</label>
+	      		<br>
+				<input  class="form-control"  ng-model="examine.resaon" style="float:left" />
+				<button type="submit" class="btn btn-success" ng-click="examineResaon()" style="float:left" >提交</button>
+			</form>
+			<div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+		    </div>
+	    </div>
+	  </div>
+	</div>
+	<div class="modal fade as-example-modal-lg"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+	    	<img ng-src="{{examine.urlCoacha}}" width="100" height="150">
+	    	<img ng-src="{{examine.urlIDa}}" width="100" height="150">
+	    	<img ng-src="{{examine.urlOthera}}" width="100" height="150">
+	      	<form name="examine_form" novalidate ng-show="showExamine" >
+				<lable>输入名字</lable>
+				<input type="text" ng-model="examine.name" required  />
+				<lable>输入身份证</lable>
+				<input type="text" ng-model="examine.id" required    />
+				<lable>输入teachType</lable>
+				<input type="text" ng-model="examine.teachType" required    />
+				<button type="submit" ng-click="examineCoach()" >提交</button>
+			</form>
+			<div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+		    </div>
+	    </div>
+	  </div>
+	</div>
+	
 </div>
+
+
