--- a/yj-web-platform/template/userItem.html
+++ b/yj-web-platform/template/userItem.html
@@ -5,15 +5,40 @@
 	<button  type="button" class="btn btn-default btn-lg margin">{{user.createDate}}</button>
 </div>
 <div ng-controller="fuckQiniu">
-	<button type="submit" ng-click="postIdCardF(user)"  >获取凭证</button>
-	<p class="should">watching model:</p>
-    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
-    Select File:
-    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
-	<p class="should">Upload Log:</p>
-	<pre class="should">{{log}}</pre>
-	<button  ng-click="getDownload()">获取下载链接</button>
-	<input type="text" ng-model="Download.url" ng-show="DownSuccess" />
+	<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success"  >查看详情</button>
+	<div class="photoList">
+		<small  ng-show="jiashi">驾驶证</small>
+		<img ng-src="{{Download.url}}" width="100" height="150" ng-show="jiashi">
+		<div class="addPhote" ng-show="jiashizheng">
+			<small>添加驾驶证</small>
+			<p class="should">watching model:</p>
+		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+			<p class="should">Upload Log:</p>
+			<pre class="should">{{log}}</pre>
+		</div>
+		<small ng-show="jiaolian" >教练证</small>
+		<img ng-src="{{Download.Durl}}" width="100" height="150" ng-show="jiaolian">
+		<div class="addPhote" ng-show="jiaolianzheng">
+			<small>添加教练证</small>
+			<p class="should">watching model:</p>
+		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+			<p class="should">Upload Log:</p>
+			<pre class="should">{{log}}</pre>
+		</div>
+		<small ng-show="shenfen" >身份证</small>
+		<img ng-src="{{Download.Iurl}}" width="100" height="150" ng-show="shenfen">
+		<div class="addPhote" ng-show="shenfenzheng">
+			<small>添加身份证</small>
+			<p class="should">watching model:</p>
+		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+			<p class="should">Upload Log:</p>
+			<pre class="should">{{log}}</pre>
+		</div>
+	</div>
+	
 </div>
 
 
