--- a/home-page/css/bootstrap/platform.css
+++ b/home-page/css/bootstrap/platform.css
@@ -1,5 +1,5 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin:0; padding:0; } 
-body, button, input, select, textarea { font:12px/1.5tahoma, arial, \5b8b\4f53; } 
+body, button, input, select, textarea { font:1em/1.5tahoma, arial, \5b8b\4f53; } 
 address, cite, dfn, em, var { font-style:normal; } 
 code, kbd, pre, samp { font-family:couriernew, courier, monospace; } 
 small{ font-size:12px; } 
@@ -185,19 +185,38 @@ hr{
 	padding-top: 10px
 }
 .recruitImg img{
-	width:150px;
+	/*position:relative;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);*/
+	/*width:150px;
 	height:300px;
-	margin-top: 50px
+	margin-top: 50px*/
+	width: 20%
 }
 .recruitImg{
-	float: left;
-	margin-left: 6%
+	/*float: left;
+	margin-left: 6%;*/
+	position:relative;
+	top:50%;
+	left:5%;
+	transform:translate(-5%,-50%);
+	-ms-transform:translate(-5%,-50%);	/* IE 9 */
+	-moz-transform:translate(-5%,-50%);	/* Firefox */
+	-webkit-transform:translate(-5%,-50%); /* Safari 和 Chrome */
+	-o-transform:translate(-5%,-50%); 	/* Opera */
+	
 }
 .jobside{
-	float: left;
-	margin-left: 8%;
-	width: auto;
-	margin-bottom: 10px
+	position:relative;
+	top:-100%;
+	left:32%;
+	transform:translate(0%,200px);
+	-ms-transform:translate(0%,-50%);	/* IE 9 */
+	-moz-transform:translate(0%,-50%);	/* Firefox */
+	-webkit-transform:translate(0%,25%); /* Safari 和 Chrome */
+	-o-transform:translate(0%,-50%); 	/* Opera */
+	width: 65%
 }
 .job-list{
 	border: 1px solid gray;
