--- a/yj-web-platform/css/bootstrap/platform.css
+++ b/yj-web-platform/css/bootstrap/platform.css
@@ -98,18 +98,18 @@ from{transform:rotate(0deg)}
     top: 0.4%; 
 }
 .login{
-	background-image: url(../../img/282396.jpg);
+	/*background-image: url(../../img/282396.jpg);
 	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	/* width: 100%; */
+	background-repeat: no-repeat;*/
+	 /*width: 100%; */
 	height:60%;
 }
 .Login_detiles{
-	width:auto;
-	height:auto;
-	position: absolute;
-	top:45%;
-	left:15%;
+	width: 50%;
+	height: 80%;
+	position: relative;
+	top:35%;
+	left:25%;
 }
 .represent{
 	margin:0 0 5px 0;
@@ -277,4 +277,15 @@ from{transform:rotate(0deg)}
 .fixed_width{
 	width: 160px;
 	overflow:overlay;
+}
+.form_control{
+	width: 100%;
+}
+.login_form{
+	width: 30%;
+	margin: 0 auto;
+}
+.login_submit{
+	float: right;
+	margin-top: 10%
 }
