--- a/yj-web-platform/template/menu.html
+++ b/yj-web-platform/template/menu.html
@@ -22,7 +22,7 @@
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-		        <li><a href="/platform/login">登录</a></li>
+		        <li><a href="/platform/login">{{login}}</a></li>
 		     </ul>
 		</nav>
 	</div>
