--- a/yj-web-platform/template/login.html
+++ b/yj-web-platform/template/login.html
@@ -1,23 +1,12 @@
 <div  class="login container">
 	<div class="Login_detiles">
-		<form  name="signin_form" novalidate ng-submit="signinForm()" >
+		<form  name="signin_form" novalidate ng-submit="signinForm()" class="login_form" >
 			<label>Your Name</label>
-			<input type="text" placeholder="Name"  name="name" ng-model="signin.name" ng-minlength=1 ng-maxlength=20 required />
-			<div class="error" ng-messages="signin_form.name.$error" ng-messages-multiple>
-				<div ng-message="required">sure you enter your name</div>
-				<div ng-message="minlengtrh"> your name must be at least 3 characters</div>
-				<div ng-message="maxlength">your name can not be longer than 20 characters</div>
-			</div>
+			<input type="text" placeholder="Name" class="form-control form_control"  name="name" ng-model="signin.name" required />
 			<br>
 			<label>password</label>
-			<input type="password" placeholder="Password"  name="password" ng-model="signin.password" ng-minlength=6 ng-maxlength=10 required />
-			<div class="error" ng-messages="signin_form.name.$error" ng-messages-multiple>
-				<div ng-message="required">sure you enter your password</div>
-				<div ng-message="minlengtrh"> your password must be at least 6 characters</div>
-				<div ng-message="maxlength">your password can not be longer than 10 characters</div>
-			</div>
-
-			<button type="submit">Submit</button>
+			<input type="password" placeholder="Password" class="form-control form_control"  name="password" ng-model="signin.password" required />
+			<button type="submit" class="btn btn-success login_submit">Submit</button>
 		</form>
 	</div>
 </div >
