--- a/yj-web-platform/template/menu.html
+++ b/yj-web-platform/template/menu.html
@@ -20,6 +20,7 @@
 				<li><a href="/platform/LookTest" title="查看测试人员">查看测试人员</a></li>
 				<li><a href="/platform/searchUser" title="寻找用户">寻找用户</a></li>
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
+				<li><a href="/platform/addDriveSchool" title="驾校管理">驾校管理</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 		        <li><a href="/platform/login">{{login}}</a></li>
