--- a/yj-web-platform/template/jobList.html
+++ b/yj-web-platform/template/jobList.html
@@ -10,3 +10,4 @@
 	</div>
 	<button type="button" class="glyphicon glyphicon-remove " ng-click="deleteJob(job.id)" ></button>
 </div>
+<div class="clear"></div>
