--- a/yj-web-platform/css/bootstrap/platform.css
+++ b/yj-web-platform/css/bootstrap/platform.css
@@ -241,6 +241,9 @@ from{transform:rotate(0deg)}
 	margin-top: 5px;
 	border-radius: 5px
 }
+.container{
+	width: 75% !important;
+}
 .glyphicon{
 	width: 20px;
 	float: left;
@@ -294,4 +297,12 @@ from{transform:rotate(0deg)}
 }
 .driveName{
 	float: left
+}
+.btn-default{
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+}
+.getManager{
+	margin-top: 30px;
 }
