--- a/template/systemInit.html
+++ b/template/systemInit.html
@@ -1,6 +1,9 @@
-<div class="systemInit">
-  <div class="side_view">
-	   <img src="./img/boy_phone_500.png" class="boy_phone">
-	   <img src="./img/propeller_27.png" class="propeller" >
-   </div>
+<div class="container">
+	<div class="systemInit">
+	  <div class="side_view">
+		   <img src="./img/boy_phone_500.png" class="boy_phone">
+		   <img src="./img/propeller_27.png" class="propeller" >
+	   </div>
+	</div>
 </div>
+
