--- a/template/menu.html
+++ b/template/menu.html
@@ -11,7 +11,7 @@
 		</div>
 		<nav class="collapse navbar-collapse bs-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/platform/initAdmin" title="初始化" style="display:none">初始化</a></li>
+				<li><a href="/platform/checkInit" title="初始化" >初始化</a></li>
 				<li><a href="/platform/addSiteInfo" title="添加场地信息">添加场地信息</a></li>
 				<li><a href="/platform/getSiteInfo" title="获取场地信息">获取场地信息</a></li>
 				<li><a href="/platform/addjobs" title="添加职位">添加职位</a></li>
