--- a/template/addjobs.html
+++ b/template/addjobs.html
@@ -16,9 +16,9 @@
 				<div  ng-model="jobs.duty" contentEditable=true style="min-height:300px" class="work_boder"></div>
 				<label>职位工资</label>
 				<input type="text" placeholder="职位工资" ng-model="jobs.pay" class="form-control" />
-				<label>职位图片</label>
-				<input  ng-model="jobs.imgName"  type="text" placeholder="职位图片" class="form-control" />
-				<button type="submit" class="btn btn-primary btn-lg active">提交</button>
+				<label class="should">职位图片</label>
+				<input  ng-model="jobs.imgName"  type="text" placeholder="职位图片" class="form-control should" />
+				<button type="submit" class="btn btn-success btn-lg active">提交</button>
 			</form>
 		</div>
 	</div>
