--- a/template/userItem.html
+++ b/template/userItem.html
@@ -1,8 +1,8 @@
 <div class="clear"></div>
 <div class="data_detile">
-	<button  type="button" class="btn btn-default btn-lg margin">{{user._id}}</button>
-	<button  type="button" class="btn btn-default btn-lg margin">{{user.phone}}</button>
-	<button  type="button" class="btn btn-default btn-lg margin">{{user.createDate}}</button>
+	<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">{{user._id}}</button>
+	<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">{{user.phone}}</button>
+	<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">{{user.createDate}}</button>
 </div>
 <div ng-controller="fuckQiniu">
 	<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success"  >查看详情</button>
