--- a/template/phoneByUser.html
+++ b/template/phoneByUser.html
@@ -10,9 +10,9 @@
 	<div class="getUsers" ng-controller="userItem">
 		<div class="clear"></div>
 		<div class="compline">
-			<button  type="button" class="btn btn-default btn-lg margin">用户_id</button>
-			<button  type="button" class="btn btn-default btn-lg margin">用户phone</button>
-			<button  type="button" class="btn btn-default btn-lg margin">创建日期</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">用户_id</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">用户phone</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:170px">创建日期</button>
 		</div>
 		<div class="clear"></div>
 		<user-item ng-repeat="(key,user) in userItem"></user-item>
