--- a/template/phoneByUser.html
+++ b/template/phoneByUser.html
@@ -6,7 +6,18 @@
 		</form>
 	</div>
 	<div class="clear"></div>
-	<h2 ng-show="phone" class="phone_user" >该手机对应的学员为:{{user._id}}</h2>
+	<div class="PhoneUser" ng-show="phone" ng-controller="fuckQiniu">
+		<h2  class="phone_user" >该手机对应的用户为:</h2>
+		<user-item></user-item>
+		<!-- <label>id</label>
+		<input class="form-control" ng-model="user._id" type="text">
+		<label>phone</label>
+		<input class="form-control" ng-model="user.phone" type="text">
+		<label>createDate</label>
+		<input class="form-control" ng-model="user.createDate" type="text">
+		<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success">查看详情</button> -->
+	</div>
+	
 	<div class="getUsers" ng-controller="userItem">
 		<div class="clear"></div>
 		<div class="compline">
