--- a/template/userItem.html
+++ b/template/userItem.html
@@ -11,30 +11,30 @@
 		<small  ng-show="jiashi">驾驶证</small>
 		<img ng-src="{{Download.url}}" width="100" height="150" ng-show="jiashi">
 		<div class="addPhote" ng-show="jiashizheng">
-			<small>添加驾驶证</small>
+			<small style="float:left">添加驾驶证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
-		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
 		</div>
 		<small ng-show="jiaolian" >教练证</small>
 		<img ng-src="{{Download.Durl}}" width="100" height="150" ng-show="jiaolian">
 		<div class="addPhote" ng-show="jiaolianzheng">
-			<small>添加教练证</small>
+			<small style="float:left">添加教练证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
-		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
 		</div>
 		<small ng-show="shenfen" >身份证</small>
 		<img ng-src="{{Download.Iurl}}" width="100" height="150" ng-show="shenfen">
 		<div class="addPhote" ng-show="shenfenzheng">
-			<small>添加身份证</small>
+			<small style="float:left" >添加身份证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
-		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple">Select File</div>
+		    <div class="filechange" ngf-select ngf-change="upload($files)" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
 		</div>
